@@ -14,7 +14,7 @@ export(TimeToTargetRunSize)
 export(expit)
 export(logit)
 import(R2OpenBUGS)
-import(actuar)
+import(actuar, except = cm) 
 import(ggforce)
 import(ggplot2)
 import(grDevices)
@@ -26,3 +26,4 @@ import(rjags)
 import(splines)
 import(stats)
 import(utils)
+importFrom(data.table,setDT)
